@@ -1,5 +1,6 @@
 plugins {
     java
+    jacoco
     id("org.springframework.boot") version "3.2.4"
     id("io.spring.dependency-management") version "1.1.4"
 }
@@ -8,7 +9,7 @@ group = "com.thread"
 version = "0.1.0-SNAPSHOT"
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_17
+    sourceCompatibility = JavaVersion.VERSION_21
 }
 
 repositories {
@@ -18,18 +19,33 @@ repositories {
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
-    testImplementation("org.junit.jupiter:junit-jupiter:5.8.2")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+    testRuntimeOnly("org.reactivestreams:reactive-streams")
+    testRuntimeOnly("org.apache.logging.log4j:log4j-core")
+}
+
+tasks.all {
+    outputs.cacheIf { true }
 }
 
 tasks {
-    all {
-        outputs.cacheIf { true }
+    test {
+        jvmArgs("-Xshare:off", "-XX:+EnableDynamicAgentLoading")
+        useJUnitPlatform()
+        finalizedBy(jacocoTestReport)
+    }
+    jacocoTestReport {
+        dependsOn(test)
+        reports {
+            xml.required = true
+            csv.required = false
+            html.required = false
+        }
     }
 }
 
-tasks.test {
-    jvmArgs("-Xshare:off")
-    useJUnitPlatform()
+tasks.withType<Test>().configureEach {
+    maxParallelForks = (Runtime.getRuntime().availableProcessors() / 2).coerceAtLeast(1)
 }
 
 apply(from = "dumpJsa.gradle.kts")
